// $Id$

SimpleTest 6.x-2.6, xxxx-xx-xx (development version)
------------------------------
- Complete backport of Drupal 7.x SimpleTest module. (voids all backports).
   * Added header to all relevant files.
   * Updated INSTALL.txt.
   * #369952: Clarify INSTALL.txt.
- Backports:
   * #305150: Keep running tests checked.
   * #313902: DX: Show fatal errors in tests. (Added to INSTALL.txt)
   * #304940: SimpleTest shouldn't try to upload non files.
   * #308186: cURL 7.18.2 and SimpleTest module bitterly despise one another. (again?)
   * #330582: Retrieve HTTP response headers.
   * #336043: Simpletest speedup: skip call to curlExec() in curlConnect().
- Changes:
   * #334679 by hass: improve update path from 5.x and 6.x-1.x to 6.x-2.x.

SimpleTest 6.x-2.5, 2008-10-22
------------------------------
- Backports:
   * #308668: Make test selection page work with non-JS.
   * #316344: Add meta refresh support to SimpleTest.
   * #320127: error in drupal_web_test_case.php.
   * #320161: drupalGetTestFiles does not sort files correctly.
   * #320374: Simpletest now fails with max_allowed_packet = 1M.
   * #322779: Simpletest calls file_check_directory incorrectly.
- Changes:
   * #319682: Install.txt refers to non-existent admin page.
   * #323405: Remove bogus version = VERSION line from .info file.

SimpleTest 6.x-2.4, 2008-09-22
------------------------------
- Bugs:
   * #310427: settings.php check doesn't work properly.
- Backports:
   * #305077: Rework simpletest backend.
   * #308399: The simpletest error handler is broken for PHP functions.
   * #308262: Clean-up and documentation of simpletest.js.
   * #308186: cURL 7.18.2 and SimpleTest module bitterly despise one another.
   * #295697: update cURL requirement.
   * #299186: assertFieldByXPath does not work for selects or textareas with value.
   * #308272: Improve test selection page.
   * #255613: Update clickLink() to use drupalGet() and clean-up code.
- Changes: