@@ -6,6 +6,8 @@ SimpleTest 6.x-2.6, xxxx-xx-xx (development version)
    * Added header to all relevant files.
    * Updated INSTALL.txt.
    * #369952: Clarify INSTALL.txt.
+   * Add drupalLogout() override.
+   * Add equivilent auto-clear user code.
 - Backports:
    * #305150: Keep running tests checked.
    * #313902: DX: Show fatal errors in tests. (Added to INSTALL.txt)
